--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
   "private": true,
   "scripts": {
     "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js",
-    "serve": "nodemon --watch API --watch DB --watch index.js --watch socket.js",
+    "serve": "nodemon --watch API --watch DB --watch index.js --watch socket.js --watch lobby.js",
     "db": "mongod --dbpath=data",
     "dev": "npm-run-all --parallel watchify db",
     "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "browser-process-hrtime": "^0.1.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "line-circle-collision": "^1.1.3",
     "mongodb": "^3.0.5",
+    "node-gameloop": "^0.1.4",
     "passport": "^0.4.0",
     "passport-json": "^1.2.0",
+    "random-js": "^1.0.8",
+    "setimmediate": "^1.0.5",
     "socket.io": "^2.1.0",
     "triangle-circle-collision": "^1.0.4",
     "vue": "^2.0.1",
