--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animejs": "^2.2.0",
     "body-parser": "^1.18.2",
     "browser-process-hrtime": "^0.1.2",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "line-circle-collision": "^1.1.3",
