--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "animejs": "^2.2.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.2",
     "browser-process-hrtime": "^0.1.2",
     "connect-mongo": "^2.0.1",
