--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   "dependencies": {
     "animejs": "^2.2.0",
     "bcrypt": "^3.0.0",
+    "bitcoinjs-lib": "^3.3.2",
     "body-parser": "^1.18.2",
     "browser-process-hrtime": "^0.1.2",
     "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "install": "^0.12.1",
     "line-circle-collision": "^1.1.3",
     "mongodb": "^3.0.5",
     "node-gameloop": "^0.1.4",
+    "npm": "^6.2.0",
     "passport": "^0.4.0",
     "passport-json": "^1.2.0",
     "random-js": "^1.0.8",
+    "random-key": "^0.3.2",
     "setimmediate": "^1.0.5",
     "socket.io": "^2.1.0",
     "triangle-circle-collision": "^1.0.4",
