--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "velocity-animate": "^2.0.5",
     "vue": "^2.0.1",
     "vue-checkbox-radio": "^0.6.0",
-    "vue-directive-tooltip": "^1.4.5"
+    "vue-directive-tooltip": "^1.4.5",
+    "vue-select": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
