--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "scripts": {
     "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js",
     "serve": "nodemon --watch API --watch DB --watch index.js --watch socket.js --watch lobby.js",
-    "db": "mongod --dbpath=data",
-    "dev": "npm-run-all --parallel watchify db",
+    "dev": "npm-run-all --parallel watchify",
     "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
   },
   "dependencies": {
     "animejs": "^2.2.0",
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "bitcoinjs-lib": "^3.3.2",
     "body-parser": "^1.18.2",
@@ -25,7 +25,7 @@
     "line-circle-collision": "^1.1.3",
     "mongodb": "^3.0.5",
     "node-gameloop": "^0.1.4",
-    "npm": "^6.2.0",
+    "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-json": "^1.2.0",
     "random-js": "^1.0.8",
@@ -44,10 +44,10 @@
     "babel-preset-es2015": "^6.0.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.1",
-    "browserify-hmr": "^0.3.1",
+    "browserify-hmr": "^0.3.7",
     "cross-env": "^1.0.6",
     "envify": "^3.4.1",
-    "nodemon": "^1.17.2",
+    "nodemon": "^1.18.6",
     "npm-run-all": "^2.1.2",
     "uglify-js": "^2.5.0",
     "vueify": "^9.1.0",
