--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js",
     "serve": "nodemon --watch API --watch DB --watch index.js --watch socket.js --watch lobby.js --watch src/game/Player.js --watch src/game/PlayerSrv.js index.js TEST_MODE",
     "dev": "npm-run-all --parallel watchify",
+    "cypress:open": "cypress open",
     "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
   },
   "dependencies": {
@@ -46,6 +47,7 @@
     "browserify": "^13.0.1",
     "browserify-hmr": "^0.3.7",
     "cross-env": "^1.0.6",
+    "cypress": "^3.1.5",
     "envify": "^3.4.1",
     "nodemon": "^1.18.6",
     "npm-run-all": "^2.1.2",
