change name of entry script (required by hosting)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turning-with-satoshi",
-  "main": "index.js",
+  "main": "app.js",
   "description": "turning-with-satoshi",
   "version": "1.0.0",
   "author": "",
