--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
+
 {
-  "presets": ["es2015"]
+  "presets": [
+    [
+      "@babel/preset-env"
+    ]
+  ],
+  "env": {
+    "production": {
+      "presets": [["minify", {
+        "builtIns": false
+        }]]
+    }
+  }
 }
