--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve": "nodemon --watch API --watch DB --watch index.js --watch socket.js --watch lobby.js --watch src/game/Player.js --watch src/game/PlayerSrv.js index.js TEST_MODE",
     "dev": "npm-run-all --parallel watchify",
     "cypress:open": "cypress open",
-    "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
+    "build": "cross-env NODE_ENV=production BABEL_ENV=production browserify -g envify src/main.js > dist/build.js"
   },
   "dependencies": {
     "animejs": "^2.2.0",
@@ -41,9 +41,12 @@
     "vue-select": "^2.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-minify": "^0.5.1",
     "babel-preset-es2015": "^6.0.0",
-    "babelify": "^7.2.0",
+    "babel-preset-minify": "^0.5.1",
+    "babelify": "^10.0.0",
     "browserify": "^13.0.1",
     "browserify-hmr": "^0.3.7",
     "cross-env": "^1.0.6",
