--- a/package.json
+++ b/package.json
@@ -50,13 +50,15 @@
     "browserify": "^13.0.1",
     "browserify-hmr": "^0.3.7",
     "cross-env": "^1.0.6",
-    "cypress": "^3.1.5",
     "envify": "^3.4.1",
     "nodemon": "^1.18.6",
     "npm-run-all": "^2.1.2",
     "uglify-js": "^2.5.0",
     "vueify": "^9.1.0",
     "watchify": "^3.4.0"
+  },
+  "optionalDependencies":{
+    "cypress": "^3.1.5"
   },
   "browserify": {
     "transform": [
