--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "author": "",
   "private": true,
   "scripts": {
-    "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js",
+    "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o public/build.js",
     "serve": "nodemon --watch API --watch DB --watch index.js --watch socket.js --watch lobby.js --watch src/game/Player.js --watch src/game/PlayerSrv.js index.js TEST_MODE",
     "dev": "npm-run-all --parallel watchify",
     "cypress:open": "cypress open",
-    "build": "cross-env NODE_ENV=production BABEL_ENV=production browserify -g envify src/main.js > dist/build.js"
+    "build": "cross-env NODE_ENV=production BABEL_ENV=production browserify -g envify src/main.js > public/build.js"
   },
   "dependencies": {
     "animejs": "^2.2.0",
