--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "velocity-animate": "^2.0.5",
     "vue": "^2.0.1",
     "vue-checkbox-radio": "^0.6.0",
-    "vue-directive-tooltip": "^1.4.5",
+    "vue-directive-tooltip": "1.4.5",
     "vue-select": "^2.4.0"
   },
   "devDependencies": {
@@ -57,7 +57,7 @@
     "vueify": "^9.1.0",
     "watchify": "^3.4.0"
   },
-  "optionalDependencies":{
+  "optionalDependencies": {
     "cypress": "^3.1.5"
   },
   "browserify": {
