--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "browser-process-hrtime": "^0.1.2",
     "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "install": "^0.12.1",
@@ -29,6 +30,7 @@
     "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-json": "^1.2.0",
+    "passport.socketio": "^3.7.0",
     "random-js": "^1.0.8",
     "random-key": "^0.3.2",
     "setimmediate": "^1.0.5",
