--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "random-key": "^0.3.2",
     "setimmediate": "^1.0.5",
     "socket.io": "^2.1.0",
+    "timesync": "^1.0.4",
     "triangle-circle-collision": "^1.0.4",
     "velocity-animate": "^2.0.5",
     "vue": "^2.0.1",
