--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue": "^2.0.1",
     "vue-checkbox-radio": "^0.6.0",
     "vue-directive-tooltip": "1.4.5",
+    "vue-dropd": "^1.1.4-alpha.0",
     "vue-select": "^2.4.0"
   },
   "devDependencies": {
