--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "browser-process-hrtime": "^0.1.2",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "geo-from-ip": "^2.0.0",
     "install": "^0.12.1",
     "line-circle-collision": "^1.1.3",
     "mongodb": "^3.0.5",
@@ -41,6 +43,7 @@
     "velocity-animate": "^2.0.5",
     "vue": "^2.0.1",
     "vue-checkbox-radio": "^0.6.0",
+    "vue-country-flag": "^2.0.1",
     "vue-directive-tooltip": "1.4.5",
     "vue-dropd": "^1.1.4-alpha.0",
     "vue-select": "^2.4.0"
